product card image object-fit product card buy button login modal layout update

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,11 +3,5 @@
 @{
     ViewData["Title"] = "Home page";
 }
-    <h1>Bem Vindo(a)</h1>
+<h1 class="m-auto"> Bem Vindo!</h1>
 
-
-<script>
-var limit = 10; // Max questions
-var count = 4; // There are 4 questions already
-
-</script>
