--- a/Pages/Category/Details.cshtml
+++ b/Pages/Category/Details.cshtml
@@ -1,28 +1,28 @@
 ﻿@page
 @model LojaVirtual.Pages.Category.DetailsModel
 @{
-    Layout = "_ManagementLayout";
+  Layout = "~/Pages/Management/Shared/_Layout.cshtml";
 
 }
 <div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Category.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Category.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Category.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Category.Description)
-        </dd>
-    </dl>
+  <h4>Category</h4>
+  <hr />
+  <dl class="row">
+    <dt class="col-sm-2">
+      @Html.DisplayNameFor(model => model.Category.Name)
+    </dt>
+    <dd class="col-sm-10">
+      @Html.DisplayFor(model => model.Category.Name)
+    </dd>
+    <dt class="col-sm-2">
+      @Html.DisplayNameFor(model => model.Category.Description)
+    </dt>
+    <dd class="col-sm-10">
+      @Html.DisplayFor(model => model.Category.Description)
+    </dd>
+  </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Category.CategoryId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+  <a asp-page="./Edit" asp-route-id="@Model.Category.CategoryId">Edit</a> |
+  <a asp-page="./Index">Back to List</a>
 </div>
