--- a/Pages/Category/Index.cshtml
+++ b/Pages/Category/Index.cshtml
@@ -1,40 +1,40 @@
 ﻿@page
 @model LojaVirtual.Pages.Category.IndexModel
 @{
-    Layout = "_ManagementLayout";
+  Layout = "~/Pages/Management/Shared/_Layout.cshtml";
 
 }
 <p>
-    <a asp-page="Create">Create New</a>
+  <a class="btn btn-primary" asp-page="Create">Cadastrar Nova</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Category[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category[0].Description)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Category)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    <a asp-page="./Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.CategoryId">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.CategoryId">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
+  <thead>
+    <tr>
+      <th>
+        @Html.DisplayNameFor(model => model.Category[0].Name)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Category[0].Description)
+      </th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    @foreach (var item in Model.Category)
+    {
+      <tr>
+        <td>
+          @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Description)
+        </td>
+        <td>
+          <a class="btn-primary" asp-page="./Edit" asp-route-id="@item.CategoryId">Editar</a> |
+          <a class="btn btn-secondary" asp-page="./Details" asp-route-id="@item.CategoryId">Visualizar</a> |
+          <a class="btn btn-danger" asp-page="./Delete" asp-route-id="@item.CategoryId">Deletar</a>
+        </td>
+      </tr>
+    }
+  </tbody>
 </table>
