--- a/Pages/Product/Delete.cshtml
+++ b/Pages/Product/Delete.cshtml
@@ -3,7 +3,8 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "_ManagementLayout";
+  Layout = "~/Pages/Management/Shared/_Layout.cshtml";
+
 }
 
 <h1>Exclusão</h1>
