--- a/Pages/Product/Details.cshtml
+++ b/Pages/Product/Details.cshtml
@@ -1,38 +1,17 @@
 ﻿@page
 @model LojaVirtual.Pages.Product.DetailsModel
+@using Product.Components;
+@using Microsoft.AspNetCore.Components;
 
 @{
-    ViewData["Title"] = "Details";
-    Layout = "_ManagementLayout";
+  ViewData["Title"] = "Details";
+    Layout = "~/Pages/Management/Shared/_Layout.cshtml";
+
 }
+<div class="p-2">
+  <h1>Visualizar</h1>
 
-<h1>Visualizar</h1>
+  <component type="typeof(Product.Components.ProductFormCreate)" render-mode="Server" />
 
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Price)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.Price)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Product.ProductId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+  <a asp-page="./Index">Back to List</a>
 </div>
