--- a/Pages/Product/Index.cshtml
+++ b/Pages/Product/Index.cshtml
@@ -3,13 +3,13 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "_ManagementLayout";
+    Layout = "~/Pages/Management/Shared/_Layout.cshtml";
 }
 
 <h1>Índice</h1>
 
 <p>
-    <a asp-page="Create">Novo Produto</a>
+    <a class="btn btn-primary" asp-page="Create">Novo Produto</a>
 </p>
 <table class="table">
     <thead>
@@ -39,9 +39,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ProductId">Editar</a> |
-                <a asp-page="./Details" asp-route-id="@item.ProductId">Visualizar</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ProductId">Deletar</a>
+                <a class="btn btn-secondary" asp-page="./Edit" asp-route-id="@item.ProductId">Editar</a> |
+                <a class="btn btn-primary" asp-page="./Details" asp-route-id="@item.ProductId">Visualizar</a> |
+                <a class="btn btn-danger" asp-page="./Delete" asp-route-id="@item.ProductId">Deletar</a>
             </td>
         </tr>
 }
