--- a/Pages/Product/ProductDetail.cshtml
+++ b/Pages/Product/ProductDetail.cshtml
@@ -1,137 +1,139 @@
-﻿@page
+﻿@page "{handler?}"
 
 @model LojaVirtual.ProductDetailModel
 @{
-    ViewData["Title"] = "ProductDetail";
+  ViewData["Title"] = "ProductDetail";
 }
 
-    <div class="container-fluid ">
+<div class="container-fluid ">
 
-        <div class="row">
-            @if (@Model.Product.ProductImage != null && Model.Product.Images != null)
-            {
-                int imageIndex = (int)Model.Product.ProductImage;
-                Models.Image img = Model.Product.Images.ElementAt(imageIndex);
-                string byte64 = new string("data:image/gif;base64," + Convert.ToBase64String(img.Data)) ;
-                <img class="mx-auto my-2 img" width="700" height="200"  src="@byte64" alt="">
-            }
-            else
-            {
-                <img class="mx-auto my-2 img" width="700" height="200" src="http://placehold.it/900x400" alt="">
-            }
+  <div class="row card">
+    @if (@Model.Product.ProductImage != null && Model.Product.Images != null && Model.Product.Images.Count > 0)
+    {
+      int imageIndex = (int)Model.Product.ProductImage;
+      Models.Image img = Model.Product.Images.ElementAt(imageIndex);
+      string byte64 = new string("data:image/gif;base64," + Convert.ToBase64String(img.Data));
+      <img class="mx-auto p-1 card-img-top" width="700" height="200" style="object-fit: contain" src="@byte64" alt="">
+    }
+    else
+    {
+      <img class="mx-auto p-1 card-img-top" width="700" height="200" src="http://placehold.it/900x400" alt="">
+    }
 
-            <div class="row  card-body">
-                <div class="card col-sm-9 ">
-                    <div class="m-4">
-                        <h3 class="card-title ">@Model.Product.Name</h3>
-                        <p class="card-text">@Model.Product.Description</p>
-                        <h4>R$ @Model.Product.Price</h4>
-                    </div>
-                </div>
-
-                <div class="card col-sm m-0 p-0">
-                    <form class="card-body m-0" action="/" method="post">
-
-                        <div class="card-body">
-                            <div class="row"><label>Quantidade</label></div>
-                            <div class="row">
-                                <input type="number" class="form-control col" min="1">
-                            </div>
-                        </div>
-
-                        <div class="card-body">
-                            <div class="row"><button type="submit" class="btn btn-danger p-2 m-1 col"><span class=""></span>Adicionar a Lista de Desejos</button></div>
-                            <div class="row"><button type="submit" class="btn btn-primary p-2 m-1 col">Adicionar ao Carrinho</button></div>
-                            <div class="row">
-                            <button type="submit" asp-page="/Shopping-Cart/ShoppingCart" asp-page-handler="/Shopping-Cart/ShoppingCart" class="btn btn-success p-4 m-1 col">Comprar</button>
-                            </div>
-                        </div>
-
-                    </form>
-                </div>
-            </div>
-
+    <div class="row  card-body">
+      <div class="card col-sm-9 ">
+        <div class="m-4">
+          <h3 class="card-title ">@Model.Product.Name</h3>
+          <p class="card-text">@Model.Product.Description</p>
+          <h4>R$ @Model.Product.Price</h4>
         </div>
+      </div>
 
-        <!-- #region Related  -->
+      <div class="card col-sm m-0 p-0">
+        <form class="card-body m-0"  method="post">
 
-        <div class="container my-5">
-            <h3 class="my-4">Relacionados</h3>
-
-            <div class="row align-items-center">
-
-                <div class="col-md-3 col-sm-6 m-2 p-2 card text-center ">
-                    <a href="#" style="color:#000000; text-decoration:none">
-
-                        <img class="img-fluid" src="http://placehold.it/300x200" alt="">
-
-                        <div class="card-body">
-                            <h3 class="card-title">Title</h3>
-                            <h4 class="card-text">R$ value</h4>
-                        </div>
-
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6 m-2 p-2 card text-center ">
-                    <a href="#" style="color:#000000; text-decoration:none">
-
-                        <img class="img-fluid" src="http://placehold.it/300x200" alt="">
-
-                        <div class="card-body">
-                            <h3 class="card-title">Title</h3>
-                            <h4 class="card-text">R$ value</h4>
-                        </div>
-
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6 m-2 p-2 card text-center ">
-                    <a href="#" style="color:#000000; text-decoration:none">
-
-                        <img class="img-fluid" src="http://placehold.it/300x200" alt="">
-
-                        <div class="card-body">
-                            <h3 class="card-title">Title</h3>
-                            <h4 class="card-text">R$ value</h4>
-                        </div>
-
-                    </a>
-                </div>
-
-
+          <div class="card-body">
+            <div class="row"><label>Quantidade</label></div>
+            <div class="row">
+              <input type="number" asp-for="@Model.Quantity" class="form-control col" min="1">
             </div>
+          </div>
 
-        </div>
-        <!-- #endregion -->
-        <!-- #region Product Review -->
-
-        <div class="card card-outline-secondary my-4">
-            <div class="card-header">
-                Comentários
+          <div class="card-body">
+            @*<div class="form row "><button type="submit" class="btn btn-danger p-2 m-1 col"><span class=""></span>Adicionar a Lista de Desejos</button></div>*@
+            <div class="row">
+              <button asp-page-handler="AddItem" asp-route-product=@Model.Product.ProductId type="submit" class="btn btn-primary p-2 m-1 col">Adicionar ao Carrinho</button>
             </div>
-
-            <div class="card-body">
-                <form action="/" method="post">
-                    <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Digite seu Comentário Aqui!</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
-                </form>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-                <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-                <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-                <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-
-
+            <div class="row">
+              <button type="submit" asp-page-handler="BuyItem" asp-route-product=@Model.Product.ProductId  class="btn btn-success p-4 m-1 col">Comprar</button>
             </div>
-        </div>
+          </div>
 
-        <!-- #endregion -->
+        </form>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- #region Related  -->
+
+  <div class="container my-5">
+    <h3 class="my-4">Relacionados</h3>
+
+    <div class="row align-items-center">
+
+      <div class="col-md-3 col-sm-6 m-2 p-2 card text-center ">
+        <a href="#" style="color:#000000; text-decoration:none">
+
+          <img class="img-fluid" src="http://placehold.it/300x200" alt="">
+
+          <div class="card-body">
+            <h3 class="card-title">Title</h3>
+            <h4 class="card-text">R$ value</h4>
+          </div>
+
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-6 m-2 p-2 card text-center ">
+        <a href="#" style="color:#000000; text-decoration:none">
+
+          <img class="img-fluid" src="http://placehold.it/300x200" alt="">
+
+          <div class="card-body">
+            <h3 class="card-title">Title</h3>
+            <h4 class="card-text">R$ value</h4>
+          </div>
+
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-6 m-2 p-2 card text-center ">
+        <a href="#" style="color:#000000; text-decoration:none">
+
+          <img class="img-fluid" src="http://placehold.it/300x200" alt="">
+
+          <div class="card-body">
+            <h3 class="card-title">Title</h3>
+            <h4 class="card-text">R$ value</h4>
+          </div>
+
+        </a>
+      </div>
+
 
     </div>
+
+  </div>
+  <!-- #endregion -->
+  <!-- #region Product Review -->
+
+  <div class="card card-outline-secondary my-4">
+    <div class="card-header">
+      Comentários
+    </div>
+
+    <div class="card-body">
+      <form action="/" method="post">
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Digite seu Comentário Aqui!</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
+      <hr>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+      <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+      <hr>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+      <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+      <hr>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
+      <small class="text-muted">Posted by Anonymous on 3/1/17</small>
+
+
+    </div>
+  </div>
+
+  <!-- #endregion -->
+
+</div>
 
