--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -1,52 +1,107 @@
 ﻿@page "{handler?}"
 
-@model LojaVirtual._LoginPartialModel
+@model LojaVirtual.LoginModel
 @*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
+  For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
 
 <ul class="navbar-nav">
-    @if (LoginManagement.IsLogged)
-    {
-        <li class="d-flex nav-item align-items-center">
-            <p  class=" text-dark align-middle m-2">Bem Vindo(a)!  @LoginManagement.TempUser.Name!</p>
-        </li>
-        <li class="nav-item m-1 row">
-            <a asp-page="/Shopping-Cart/ShoppingCart" asp-page-handler="" class="nav-link text-dark" >
-                <span style="font-size: 1em;">
-                    <i class="fas fa-shopping-cart"></i>
-                </span>
-                Carrinho
-            </a>
-        </li>
-        <li class="nav-item m-1 row">
-            <a class="nav-link text-dark" asp-page="../Index">
-                <span style="font-size: 1em;">
-                    <i class="fas fa-user"></i>
-                </span>
-                Conta
-            </a>
-        </li>
+  @if (LoginManagement.IsLogged)
+  {
+    <li class="d-flex nav-item align-items-center">
+      <p class=" text-light align-middle m-2">Bem Vindo(a)!  @LoginManagement.TempUser.Name!</p>
+    </li>
+    <li class="nav-item m-1 row">
+      <a asp-page="/Shopping-Cart/ShoppingCart" asp-page-handler="" class="nav-link text-light">
+        <span style="font-size: 1em;">
+          <i class="fas fa-shopping-cart"></i>
+        </span>
+        Carrinho
+      </a>
+    </li>
+    <li class="nav-item m-1 row">
+      <a class="btn btn-defaut nav-link text-light" asp-page="../Index">
+        <span style="font-size: 1em;">
+          <i class="fas fa-user"></i>
+        </span>
+        Conta
+      </a>
+    </li>
 
-        <li class="nav-item m-1 row">
-            <form class="form-inline" asp-page-handler="logoff" method="post" asp-page="/Shared/_LoginPartial">
+    <li class="nav-item m-1 row">
+      <form class="form-inline" asp-page-handler="logoff" method="post" asp-page="/Shared/_LoginPartial">
 
-                <button class="nav-link text-dark btn btn-default" title="Manage">
-                    <span style="font-size: 1em;">
-                        <i class="fas fa-power-off"></i>
-                    </span>Log Off
-                </button>
-            </form>
-        </li>
-    }
-    else
-    {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-page="/User/Register">Register</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-page="/User/Login">Login</a>
-        </li>
-    }
+        <button class="nav-link text-light btn btn-default" title="Manage">
+          <span style="font-size: 1em;">
+            <i class="fas fa-power-off"></i>
+          </span>Log Off
+        </button>
+      </form>
+    </li>
+  }
+  else
+  {
+    <li class="nav-item">
+      <a class="nav-link text-light" asp-page="/User/Register">Register</a>
+    </li>
+    <li class="nav-item">
+      <button class=" btn btn-default nav-link text-light" data-toggle="modal" data-target="#exampleModal">Login</button>
+    </li>
+  }
+
+
 </ul>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content" style="background-color: transparent; border-color: transparent;">
+      <div class="modal-body" style="background-color: transparent;">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="card w-100">
+              <div class="card-body">
+
+                <h5 class="card-title text-center">Conectar</h5>
+                <form method="post" role="form" class="form-horizontal m-auto">
+                  @Html.AntiForgeryToken()
+
+                  <hr />
+
+                  @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                  <div class="form-group">
+                    @Html.LabelFor(m => m.tempUser.Name, new { @class = "control-label" })
+                    <div class="row mx-1">
+                      @Html.TextBoxFor(m => m.tempUser.Name, new { @class = "form-control" })
+                      @Html.ValidationMessageFor(m => m.tempUser.Name, "", new { @class = "text-danger" })
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    @Html.LabelFor(m => m.tempUser.Password, new { @class = "control-label" })
+                    <div class="row mx-1">
+                      @Html.PasswordFor(m => m.tempUser.Password, new { @class = "form-control" })
+                      @Html.ValidationMessageFor(m => m.tempUser.Password, "", new { @class = "text-danger" })
+                    </div>
+                  </div>
+
+                  <div class="custom-control custom-checkbox mb-3">
+                    <input type="checkbox" class="custom-control-input" id="customCheck1">
+                    <label class="custom-control-label" for="customCheck1">Lembrar Senha</label>
+                  </div>
+
+                  <button class="btn btn-lg btn-primary btn-block text-uppercase" asp-page-handler="LogIn" asp-page="/User/Login" type="submit">Conectar</button>
+                  <hr class="my-4">
+                  <button class="btn btn-lg  btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Conectar com Google</button>
+                  <button class="btn btn-lg  btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Conectar com Facebook</button>
+
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
